--- a/_columns/The_Big_Picture/zh-cn/2024-11-18.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-18.md
@@ -10,149 +10,118 @@ author: VIDYA RAMAKRISHNAN
 
 
 
-The stock market staged a rebound Monday after last week's setback, as most major indexes climbed. **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) fell amid fresh fears for its Blackwell chip just two days before its earnings report. After the close, **Super Micro Computer** ([SMCI](https://research.investors.com/quote.aspx?symbol=SMCI)) rallied after it avoided a Nasdaq delisting.  
-股市在上周受挫后周一出现反弹，大多数主要股指都上涨。就在财报发布前两天，**英伟达** （[NVDA）](https://research.investors.com/quote.aspx?symbol=NVDA) 因对其 Blackwell 芯片的新担忧而下跌。收盘后，**Super Micro Computer** （[SMCI）](https://research.investors.com/quote.aspx?symbol=SMCI) 在避免纳斯达克退市后上涨。
+The stock market staged a rebound Monday after last week's setback, as most major indexes climbed. **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) fell amid fresh fears for its Blackwell chip just two days before its earnings report. After the close, **Super Micro Computer** ([SMCI](https://research.investors.com/quote.aspx?symbol=SMCI)) rallied after it avoided a Nasdaq delisting.  
 
 
-Dow Jones industrials lagged for most of the trading day and finished 0.1% lower, weighed by underperformance in **Amgen** ([AMGN](https://research.investors.com/quote.aspx?symbol=AMGN)), **Goldman Sachs** ([GS](https://research.investors.com/quote.aspx?symbol=GS)), Nvidia and **Sherwin-Williams** ([SHW](https://research.investors.com/quote.aspx?symbol=SHW)). Those three stocks accounted for about 85 points off the Dow. **Nike** ([NKE](https://research.investors.com/quote.aspx?symbol=NKE)) fell to its lowest close since Aug. 12.  
-道琼斯工业指数在交易日的大部分时间里都表现落后，收盘下跌 0.1%，受到**安进** （[AMGN）、](https://research.investors.com/quote.aspx?symbol=AMGN)**高盛** （[GS）、](https://research.investors.com/quote.aspx?symbol=GS)英伟达和**宣伟** （[SHW](https://research.investors.com/quote.aspx?symbol=SHW)） 表现不佳的拖累。这三只股票约占道琼斯指数 85 点。**耐克** （[NKE](https://research.investors.com/quote.aspx?symbol=NKE)） 跌至 8 月 12 日以来的最低收盘价。
+Dow Jones industrials lagged for most of the trading day and finished 0.1% lower, weighed by underperformance in **Amgen** ([AMGN](https://research.investors.com/quote.aspx?symbol=AMGN)), **Goldman Sachs** ([GS](https://research.investors.com/quote.aspx?symbol=GS)), Nvidia and **Sherwin-Williams** ([SHW](https://research.investors.com/quote.aspx?symbol=SHW)). Those three stocks accounted for about 85 points off the Dow. **Nike** ([NKE](https://research.investors.com/quote.aspx?symbol=NKE)) fell to its lowest close since Aug. 12.  
 
 
 
 
-But **Boeing** ([BA](https://research.investors.com/quote.aspx?symbol=BA)) held the biggest gains in the Dow, up 2.6%. The stock remains in a clear downtrend and below a downward-sloping [50 day moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-50-day-moving-average-when-to-buy-or-sell-growth-stocks/). Its [Relative Strength Rating](https://www.investors.com/how-to-invest/investors-corner/relative-strength-rating-stock-chart-analysis-helps-pick-outstanding-growth-stocks/) is just 11 out of 99.  
-但**波音** （[BA）](https://research.investors.com/quote.aspx?symbol=BA) 在道琼斯指数中涨幅最大，上涨 2.6%。该股仍处于明显的下降趋势中，并低于向下倾斜的 [50 天移动平均线](https://www.investors.com/how-to-invest/investors-corner/what-is-the-50-day-moving-average-when-to-buy-or-sell-growth-stocks/)。它的[相对强度评分](https://www.investors.com/how-to-invest/investors-corner/relative-strength-rating-stock-chart-analysis-helps-pick-outstanding-growth-stocks/)仅为 11 分（满分 99 分）。
+But **Boeing** ([BA](https://research.investors.com/quote.aspx?symbol=BA)) held the biggest gains in the Dow, up 2.6%. The stock remains in a clear downtrend and below a downward-sloping [50 day moving average](https://www.investors.com/how-to-invest/investors-corner/what-is-the-50-day-moving-average-when-to-buy-or-sell-growth-stocks/). Its [Relative Strength Rating](https://www.investors.com/how-to-invest/investors-corner/relative-strength-rating-stock-chart-analysis-helps-pick-outstanding-growth-stocks/) is just 11 out of 99.  
 
 
-The S&P 500 and the Nasdaq remained in the green most of the trading day. More importantly, they passed a test of support at their [21-day exponential moving averages.](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/)  
-标准普尔 500 指数和纳斯达克指数在交易日的大部分时间里都处于上涨状态。更重要的是，他们通过了 [21 天指数移动平均线](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/)的支撑测试。
+The S&P 500 and the Nasdaq remained in the green most of the trading day. More importantly, they passed a test of support at their [21-day exponential moving averages.](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/)  
 
 
-Midmorning gains faded in the afternoon, but both indexes closed higher. The S&P 500 rose 0.4% while the Nasdaq rose 0.6%, as the latter ended a four-day losing streak.  
-午盘涨幅在下午消退，但两个指数均收高。标准普尔 500 指数上涨 0.4%，纳斯达克指数上涨 0.6%，后者结束了连续四天的下跌。
+Midmorning gains faded in the afternoon, but both indexes closed higher. The S&P 500 rose 0.4% while the Nasdaq rose 0.6%, as the latter ended a four-day losing streak.  
 
 
-The S&P 500 fell 2% last week but ended right at its [21-day lines](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/) on Friday. The Nasdaq ended a notch below the 21-day moving average on Friday but rose back above it on Monday.  
-标准普尔 500 指数上周下跌 2%，但周五收于 [21 日线](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/)。纳斯达克指数周五收盘价低于 21 天移动平均线，但周一回升至该水平上方。
+The S&P 500 fell 2% last week but ended right at its [21-day lines](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/) on Friday. The Nasdaq ended a notch below the 21-day moving average on Friday but rose back above it on Monday.  
 
 
-The fact the two indexes have held those price levels is one reason [Investor's Business Daily recommended exposure](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/) remains 80%-100%.  
-这两个指数一直保持这些价格水平的事实是[《投资者商业日报》建议敞口](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/)保持 80%-100% 的原因之一。
+The fact the two indexes have held those price levels is one reason [Investor's Business Daily recommended exposure](https://www.investors.com/how-to-invest/investors-corner/risk-management-in-the-stock-market-how-much-money-to-invest-now/) remains 80%-100%.  
 
 
-![market pulse](https://www.investors.com/wp-content/uploads/2024/11/MP111824-213x300.jpg)Volume was lower on the NYSE and higher on the Nasdaq from Friday's totals. Advancers led decliners on the New York Stock Exchange but were more or less evenly matched with decliners on the Nasdaq.  
-与周五的成交量相比，纽约证券交易所的成交量较低，纳斯达克的成交量较高。纽约证券交易所的上涨股领先下跌的股票，但与纳斯达克的下跌股票或多或少持平。
+![market pulse](https://www.investors.com/wp-content/uploads/2024/11/MP111824-213x300.jpg)Volume was lower on the NYSE and higher on the Nasdaq from Friday's totals. Advancers led decliners on the New York Stock Exchange but were more or less evenly matched with decliners on the Nasdaq.  
 
 
-Small caps trimmed most gains. The Russell 2000 closed only 0.1% higher, ending a four-day losing streak.  
-小盘股回吐了大部分涨幅。罗素 2000 指数收盘仅上涨 0.1%，结束了连续四天的下跌。
+Small caps trimmed most gains. The Russell 2000 closed only 0.1% higher, ending a four-day losing streak.  
 
 
-Stock Market: Magnificent Seven Stocks Nvidia, Tesla股票市场： Magnificent Seven 股票 英伟达、特斯拉
---------------------------------------------------------------------------------------
+Stock Market: Magnificent Seven Stocks Nvidia, Tesla
+----------------------------------------------------
 
 
-Monday's key movers included Nvidia, AI server maker Super Micro Computer and **Tesla** ([TSLA](https://research.investors.com/quote.aspx?symbol=TSLA)).  
-周一的主要推动者包括英伟达、人工智能服务器制造商 Super Micro Computer 和**特斯拉** （[TSLA）。](https://research.investors.com/quote.aspx?symbol=TSLA)
+Monday's key movers included Nvidia, AI server maker Super Micro Computer and **Tesla** ([TSLA](https://research.investors.com/quote.aspx?symbol=TSLA)).  
 
 
-Super Micro rose 16% after reports that the company would [meet the deadline](https://www.investors.com/news/technology/smci-stock-super-micro-seeks-to-avoid-delisting/) to file a plan to become compliant with the Nasdaq's listing requirements. After the close of trading, shares rallied another 22% after the company avoided getting kicked off the Nasdaq.  
-美超微股价上涨 16%，此前有报道称该公司将在[截止日期前](https://www.investors.com/news/technology/smci-stock-super-micro-seeks-to-avoid-delisting/)提交符合纳斯达克上市要求的计划。收盘后，该公司避免被纳斯达克踢出市场，股价又上涨了 22%。
+Super Micro rose 16% after reports that the company would [meet the deadline](https://www.investors.com/news/technology/smci-stock-super-micro-seeks-to-avoid-delisting/) to file a plan to become compliant with the Nasdaq's listing requirements. After the close of trading, shares rallied another 22% after the company avoided getting kicked off the Nasdaq.  
 
 
-The company [submitted a compliance plan](https://ir.supermicro.com/news/news-details/2024/Supermicro-Announces-Appointment-of-BDO-USA-as-Independent-Auditor-and-Filing-of-Compliance-Plan-with-Nasdaq/default.aspx) to the Nasdaq that gives it a time extension to complete listing requirements. In addition, Super Micro said it has secured BDO USA, P.C. as its independent auditor.  
-该公司向纳斯达克[提交了一份合规计划](https://ir.supermicro.com/news/news-details/2024/Supermicro-Announces-Appointment-of-BDO-USA-as-Independent-Auditor-and-Filing-of-Compliance-Plan-with-Nasdaq/default.aspx)，该计划为其提供了完成上市要求的时间延长。此外，美超微表示已聘请 BDO USA， P.C. 作为其独立审计师。
+The company [submitted a compliance plan](https://ir.supermicro.com/news/news-details/2024/Supermicro-Announces-Appointment-of-BDO-USA-as-Independent-Auditor-and-Filing-of-Compliance-Plan-with-Nasdaq/default.aspx) to the Nasdaq that gives it a time extension to complete listing requirements. In addition, Super Micro said it has secured BDO USA, P.C. as its independent auditor.  
 
 
 
-Tesla rose 6% amid news that President-elect Donald Trump's team [will look into a federal framework](https://www.investors.com/news/tesla-stocks-rises-team-trump-national-self-driving-rules/) for self-driving vehicles that can replace the requirement for approval by individual states.  
-特斯拉上涨6%，有消息称当选总统唐纳德·特朗普的团队[将研究自动驾驶汽车的联邦框架](https://www.investors.com/news/tesla-stocks-rises-team-trump-national-self-driving-rules/)，该框架可以取代各个州的批准要求。
+Tesla rose 6% amid news that President-elect Donald Trump's team [will look into a federal framework](https://www.investors.com/news/tesla-stocks-rises-team-trump-national-self-driving-rules/) for self-driving vehicles that can replace the requirement for approval by individual states.  
 
 
-Nvidia closed below a 140.76 buy point after a report that the [Blackwell chip causes overheating](https://www.investors.com/news/technology/nvidia-stock-nvda-blackwell-overheating-ai/) when connected to servers. Nvidia will report its [third-quarter earnings after market close on Wednesday](https://www.investors.com/research/nvda-stock-is-nvidia-a-buy-2/).  
-Nvidia 收于 140.76 买入点下方，此前有报道称 [Blackwell 芯片在](https://www.investors.com/news/technology/nvidia-stock-nvda-blackwell-overheating-ai/)连接到服务器时会导致过热。英伟达将在[周三收盘后公布其第三季度收益](https://www.investors.com/research/nvda-stock-is-nvidia-a-buy-2/)。
+Nvidia closed below a 140.76 buy point after a report that the [Blackwell chip causes overheating](https://www.investors.com/news/technology/nvidia-stock-nvda-blackwell-overheating-ai/) when connected to servers. Nvidia will report its [third-quarter earnings after market close on Wednesday](https://www.investors.com/research/nvda-stock-is-nvidia-a-buy-2/).  
 
 
-Stock Market Leaders Bend Lower股市领导者走低
---------------------------------------
+Stock Market Leaders Bend Lower
+-------------------------------
 
 
-For now, the Trump rally remains intact. However, some leading stocks have given up most of their gains from breakouts that occurred in the past few weeks.  
-目前，特朗普的反弹仍然完好无损。然而，一些领先股票已经回吐了过去几周发生的突破的大部分收益。
+For now, the Trump rally remains intact. However, some leading stocks have given up most of their gains from breakouts that occurred in the past few weeks.  
 
 
-The Recent Breakouts list on [IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) shows **Insulet** ([PODD](https://research.investors.com/quote.aspx?symbol=PODD)) has erased much of its 15% gain after breaking out on Nov. 6.  
-[IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) 上的近期突破列表显示**，Insulet** （[PODD](https://research.investors.com/quote.aspx?symbol=PODD)） 在 11 月 6 日爆发后已经抹去了其 15% 的大部分涨幅。
+The Recent Breakouts list on [IBD MarketSurge](https://get.investors.com/marketsurge/?artProdLink=MarketSurge) shows **Insulet** ([PODD](https://research.investors.com/quote.aspx?symbol=PODD)) has erased much of its 15% gain after breaking out on Nov. 6.  
 
 
-**Axos** ([AX](https://research.investors.com/quote.aspx?symbol=AX)) rallied past a buy zone but has stalled, trading just above a 79.15 buy point.  
-**Axos** （[AX](https://research.investors.com/quote.aspx?symbol=AX)） 反弹超过买入区域，但停滞不前，交易价格略高于 79.15 买入点。
+**Axos** ([AX](https://research.investors.com/quote.aspx?symbol=AX)) rallied past a buy zone but has stalled, trading just above a 79.15 buy point.  
 
 
-Dow Jones component **Salesforce** ([CRM](https://research.investors.com/quote.aspx?symbol=CRM)) rallied 9% after a Nov. 8 breakout, while **Amazon.com** ([AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)) rose as much as 7% after breaking out on Nov. 6. Both have given up most of those gains.  
-道琼斯成分股 **Salesforce** （[CRM）](https://research.investors.com/quote.aspx?symbol=CRM) 在 11 月 8 日突破后上涨 9%，而 **Amazon.com** （[AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)） 在 11 月 6 日突破后上涨 7%。两者都放弃了大部分收益。
+Dow Jones component **Salesforce** ([CRM](https://research.investors.com/quote.aspx?symbol=CRM)) rallied 9% after a Nov. 8 breakout, while **Amazon.com** ([AMZN](https://research.investors.com/quote.aspx?symbol=AMZN)) rose as much as 7% after breaking out on Nov. 6. Both have given up most of those gains.  
 
 
-**Charter Communications** ([CHTR](https://research.investors.com/quote.aspx?symbol=CHTR)) has fallen below its buy point of 386.28 after rising past its 5% buy zone.  
-**Charter Communications** （[CHTR）](https://research.investors.com/quote.aspx?symbol=CHTR) 在升至 5% 的买入区域后跌破其买入点 386.28。
+**Charter Communications** ([CHTR](https://research.investors.com/quote.aspx?symbol=CHTR)) has fallen below its buy point of 386.28 after rising past its 5% buy zone.  
 
 
-IBD 50 Shines In Stock MarketIBD 50 在股市大放异彩
--------------------------------------------
+IBD 50 Shines In Stock Market
+-----------------------------
 
 
-But stocks in the IBD 50 outperformed. The index rose 1.4%.  
-但 IBD 50 的股票表现优异。该指数上涨 1.4%。
+But stocks in the IBD 50 outperformed. The index rose 1.4%.  
 
 
-**Affirm** ([AFRM](https://research.investors.com/quote.aspx?symbol=AFRM)), **Robinhood** ([HOOD](https://research.investors.com/quote.aspx?symbol=HOOD)), **Root** ([ROOT](https://research.investors.com/quote.aspx?symbol=ROOT)), **Coinbase** ([COIN](https://research.investors.com/quote.aspx?symbol=COIN)) and **Doximity** ([DOCS](https://research.investors.com/quote.aspx?symbol=DOCS)) were big winners, gaining more than 5% each.  
-**Affirm** （[AFRM](https://research.investors.com/quote.aspx?symbol=AFRM)）、**Robinhood** （[HOOD）、](https://research.investors.com/quote.aspx?symbol=HOOD)**Root** （[ROOT）、](https://research.investors.com/quote.aspx?symbol=ROOT)**Coinbase** （[COIN）](https://research.investors.com/quote.aspx?symbol=COIN) 和 **Doximity** （[DOCS](https://research.investors.com/quote.aspx?symbol=DOCS)） 是大赢家，涨幅均超过 5%。
+**Affirm** ([AFRM](https://research.investors.com/quote.aspx?symbol=AFRM)), **Robinhood** ([HOOD](https://research.investors.com/quote.aspx?symbol=HOOD)), **Root** ([ROOT](https://research.investors.com/quote.aspx?symbol=ROOT)), **Coinbase** ([COIN](https://research.investors.com/quote.aspx?symbol=COIN)) and **Doximity** ([DOCS](https://research.investors.com/quote.aspx?symbol=DOCS)) were big winners, gaining more than 5% each.  
 
 
-The yield on the 10-year Treasury note fell one basis point to 4.41%.  
-10 年期美国国债收益率下跌 1 个基点至 4.41%。
+The yield on the 10-year Treasury note fell one basis point to 4.41%.  
 
 
-Housing data is in the spotlight this week. On Monday, a housing market survey of homebuilders rose in November to 46 from 43 in October. It also beat estimates of 43, according to [Econoday](https://research.investors.com/economic-calendar/?_gl=1*1iay3pk*_gcl_au*OTAzNDI2ODY3LjE3MjQyNTY4NDA.*_ga*MTQzMjcxNDIzMi4xNzMxNDE4OTMw*_ga_K2H7B9JRSS*MTczMTk1MDgyMi4zLjEuMTczMTk1MTg3My42MC4wLjA.).  
-住房数据是本周的焦点。周一，一项针对房屋建筑商的住房市场调查从 10 月份的 43 上升到 11 月份的 46。据 [Econoday](https://research.investors.com/economic-calendar/?_gl=1*1iay3pk*_gcl_au*OTAzNDI2ODY3LjE3MjQyNTY4NDA.*_ga*MTQzMjcxNDIzMi4xNzMxNDE4OTMw*_ga_K2H7B9JRSS*MTczMTk1MDgyMi4zLjEuMTczMTk1MTg3My42MC4wLjA.) 称，它还超过了 43 人的预期。
+Housing data is in the spotlight this week. On Monday, a housing market survey of homebuilders rose in November to 46 from 43 in October. It also beat estimates of 43, according to [Econoday](https://research.investors.com/economic-calendar/?_gl=1*1iay3pk*_gcl_au*OTAzNDI2ODY3LjE3MjQyNTY4NDA.*_ga*MTQzMjcxNDIzMi4xNzMxNDE4OTMw*_ga_K2H7B9JRSS*MTczMTk1MDgyMi4zLjEuMTczMTk1MTg3My42MC4wLjA.).  
 
 
-On Tuesday, housing starts and building permits for October are due, with existing-home sales for October due on Thursday.  
-周二，10 月份的房屋开工和建筑许可到期，10 月份的成屋销售将于周四到期。
+On Tuesday, housing starts and building permits for October are due, with existing-home sales for October due on Thursday.  
 
 
-The University of Michigan's consumer sentiment index and the Purchasing Manager's Index — both for November — will wrap up the major economic data for the week on Friday.  
-密歇根大学 11 月消费者信心指数和采购经理人指数将于周五结束本周的主要经济数据。
+The University of Michigan's consumer sentiment index and the Purchasing Manager's Index — both for November — will wrap up the major economic data for the week on Friday.  
 
 
-[View General Market Indicators chart page here.  
-在此处查看一般市场指标图表页面。](https://www.investors.com/wp-content/uploads/2024/11/DailyGMI_111824.pdf)
+[View General Market Indicators chart page here.](https://www.investors.com/wp-content/uploads/2024/11/DailyGMI_111824.pdf) 
 
 
-*Please follow [VRamakrishnan](https://twitter.com/IBD_VidyaR) on X/Twitter for more news on the stock market today.  
-请在 X/Twitter 上关注 [VRamakrishnan](https://twitter.com/IBD_VidyaR)，了解有关当今股市的更多新闻。*
+*Please follow [VRamakrishnan](https://twitter.com/IBD_VidyaR) on X/Twitter for more news on the stock market today.* 
 
 
-**YOU MAY ALSO LIKE: 您可能还喜欢：**
+**YOU MAY ALSO LIKE:** 
 
 
-[Is Nvidia A Buy? Nvidia 是买入的吗？](https://www.investors.com/research/nvda-stock-is-nvidia-a-buy/)
+[Is Nvidia A Buy?](https://www.investors.com/research/nvda-stock-is-nvidia-a-buy/) 
 
 
-[IBD Live: Learn And Analyze Growth Stocks With The Pros  
-IBD Live：与专业人士一起学习和分析成长型股票](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=icmhpbrdcstmsg%7Ccms%7Cibdlive%7C2019%7C11%7Cibdlive%7Cna%7C707596&src=A00387A)
+[IBD Live: Learn And Analyze Growth Stocks With The Pros](https://shop.investors.com/offer/splashresponsive.aspx?id=IBD-Live&intcode=icmhpbrdcstmsg%7Ccms%7Cibdlive%7C2019%7C11%7Cibdlive%7Cna%7C707596&src=A00387A) 
 
 
-[Learn How To Time The Market With IBD's ETF Market Strategy  
-了解如何使用 IBD 的 ETF 市场策略把握市场时机](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
+[Learn How To Time The Market With IBD's ETF Market Strategy](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/) 
 
 
-[Find The Best Long-Term Investments With IBD Long-Term Leaders  
-与 IBD 长期领导者一起寻找最佳长期投资](https://www.investors.com/research/ibd-long-term-leaders-screen)
+[Find The Best Long-Term Investments With IBD Long-Term Leaders](https://www.investors.com/research/ibd-long-term-leaders-screen) 
 
 
-[MarketSurge: Research, Charts, Data And Coaching All In One Place  
-MarketSurge：研究、图表、数据和指导都集中在一个地方](https://www.investors.com/product/marketsmith/)
+[MarketSurge: Research, Charts, Data And Coaching All In One Place](https://www.investors.com/product/marketsmith/) 
 
 
 
