--- a/_columns/The_Big_Picture/zh-cn/2024-11-20.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-20.md
@@ -1,19 +1,7 @@
 ---
 layout: content
 title: >-
-  Stock Market Shows More Strength, Pares Early Losses; Nvidia Slips Despite Strong Results	
-
-
-
-
-
-重试
-  
-        
-
-
-
-错误原因
+  Stock Market Shows More Strength, Pares Early Losses; Nvidia Slips Despite Strong Results	股市表现强劲，收复早期跌幅;尽管业绩强劲，但英伟达仍下滑
 date: 2024-11-20 17:39 -0800
 author: KEN SHREVE
 ---
