--- a/_columns/The_Big_Picture/zh-cn/2024-11-21.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-21.md
@@ -1,19 +1,7 @@
 ---
 layout: content
 title: >-
-  Dow Jones Rallies 461 Points, But Tech Stocks Lag; Google Stock Dives Below Key Level	
-
-
-
-
-
-重试
-  
-        
-
-
-
-错误原因
+  Dow Jones Rallies 461 Points, But Tech Stocks Lag; Google Stock Dives Below Key Level	道琼斯上涨 461 点，但科技股落后;谷歌股票跌破关键水平
 date: 2024-11-21 17:31 -0800
 author: SCOTT LEHTONEN
 ---
@@ -22,13 +10,7 @@ author: SCOTT LEHTONEN
 
 
 
-The Dow Jones Industrial Average rallied more than 460 points Thursday, but tech stocks lagged. **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) ended moderately higher after the artificial intelligence giant's earnings report, while **Alphabet** ([GOOGL](https://research.investors.com/quote.aspx?symbol=GOOGL)) dived on a Department of Justice request for the tech giant to sell its Chrome browser.[重试
-  
- 
-
-
-
-错误原因](javascript:void(0))
+The Dow Jones Industrial Average rallied more than 460 points Thursday, but tech stocks lagged. **Nvidia** ([NVDA](https://research.investors.com/quote.aspx?symbol=NVDA)) ended moderately higher after the artificial intelligence giant's earnings report, while **Alphabet** ([GOOGL](https://research.investors.com/quote.aspx?symbol=GOOGL)) dived on a Department of Justice request for the tech giant to sell its Chrome browser.  
 
 
 The Dow Jones Industrial Average led the main indexes with a 1.1% advance, while the S&P 500 climbed 0.5%. The tech-heavy Nasdaq composite lagged with a less-than 0.1% rise. But small caps outperformed as the Russell 2000 index jumped 1.7%.  
