--- a/_columns/The_Big_Picture/zh-cn/2024-11-22.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-22.md
@@ -1,7 +1,7 @@
 ---
 layout: content
 title: >-
-  Stock Market Drives Higher Ahead Of Thanksgiving; Inflation Data, Fed Minutes Due	感恩节前股市走高;通胀数据，美联储会议纪要到期
+  Stock Market Drives Higher Ahead Of Thanksgiving; Inflation Data, Fed Minutes Due
 date: 2024-11-22 17:29 -0800
 author: MICHAEL LARKIN
 ---
